--- a/omas/src/main/resources/application.properties
+++ b/omas/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.application.name=omas
 
 ##DATABASE##
-spring.datasource.url=jdbc:mysql://localhost/centraldb?createDatabaseIfNotExist=true
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.url=jdbc:mysql://localhost/omas_db?createDatabaseIfNotExist=true
+spring.datasource.username=sqluser
+spring.datasource.password=tsukiden+
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.mapper-locations=classpath:mapper/**/*.xml
+logging.level.org.springframework.security=DEBUG
 
 spring.security.user.name=admin
-spring.security.user.password=admin
+spring.security.user.password=password
